[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'fsm-parser'
description = ''
readme = 'README.md'
requires-python = '>=3.7'
license = 'MIT'
keywords = []
authors = [
  { name = 'Tomer Manzur', email = '90573138+syniex@users.noreply.github.com' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython',
  'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = []
dynamic = ['version']

[project.urls]
Documentation = 'https://github.com/syniex/fsmparser#readme'
Issues = 'https://github.com/syniex/fsmparser/issues'
Source = 'https://github.com/syniex/fsmparser'

[tool.hatch.version]
path = 'fsmparser/__about__.py'

[tool.hatch.envs.default]
dependencies = [
  'pre-commit',
  'pytest',
  'pytest-cov',
  'black',
  'ruff',
  'mypy'
]
[tool.hatch.envs.default.scripts]
cov = 'pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=fsmparser --cov=tests {args}'
no-cov = 'cov --no-cov {args}'

[[tool.hatch.envs.test.matrix]]
python = ['37', '38', '39', '310', '311']

[tool.coverage.run]
branch = true
parallel = true
omit = [
  'fsmparser/__about__.py',
]

[tool.coverage.report]
precision = 2
exclude_lines = [
  'no cov',
  'if __name__ == .__main__.:',
  'if TYPE_CHECKING:',
  'if typing.TYPE_CHECKING:'
]

[tool.mypy]
strict = true

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310", "py311"]
skip-magic-trailing-comma = true
skip-string-normalization = true

[tool.ruff]
target-version = 'py37'
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'PTH', 'F', 'C', 'B', 'RET', 'SIM', 'TID', 'RUF']
line-length = 120
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 14 }

[tool.ruff.per-file-ignores]
"fsmparser/_template/_rule.py" = ["E402",'B019']


[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ['fsmparser', 'tests']
